change unread_entry body to path parameter
