# app/openapi.yaml
@@ -169,7 +169,7 @@ paths:
         "400":
           description: error
       
-  /api/unread_entry:
+  /api/unread_entry/{category_id}:
     get:
       tags:
         - reader
@@ -177,17 +177,14 @@ paths:
       operationId: UnreadEntry
       security:
         - BearerAuth: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-              - category
-              properties:
-                category:
-                  type: integer
-                  format: uint64
+      parameters:
+        - name: category_id
+          in: path
+          description: category id
+          required: true
+          schema:
+            type: integer
+            format: uint64
       responses:
         "200":
           description: OK
